frontend: fix hamburger menu on mobile

--- a/frontend/src/components/AppBar/index.css
+++ b/frontend/src/components/AppBar/index.css
@@ -1,9 +1,3 @@
-.AppBar-icon {
-  width: 36px;
-  height: 36px;
-  fill: rgba(255, 255, 255, 0.5);
-}
-
 /* Fixes an 1px baseline glitch between download album and admin links */
 .AppBar .btn-link {
   border: none;
